<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.mozio.omarkrostom.pizza_menu.viewModel.PizzaViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPizzaHeader"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/drawable_pizza"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPizzaStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/choose_pizza_style"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPizzaHeader" />

            <RadioGroup
                android:id="@+id/rgPizzaStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:checkedButton="@id/rbSinglePizza"
                app:layout_constraintTop_toBottomOf="@id/tvPizzaStyle">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbSinglePizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single_pizza" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbHalfHalf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/half_and_half" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPizzaFlavor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/choose_pizza_flavor"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgPizzaStyle" />

            <RadioGroup
                android:id="@+id/rgPizzaFlavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:checkedButton="@id/rbSinglePizza"
                app:layout_constraintTop_toBottomOf="@id/tvPizzaFlavor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSecondPizzaFlavor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/choose_second_pizza_flavor"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgPizzaFlavor" />

            <RadioGroup
                android:id="@+id/rgSecondPizzaFlavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toBottomOf="@id/tvSecondPizzaFlavor" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/grpPizzaFlavor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:constraint_referenced_ids="rgSecondPizzaFlavor, tvSecondPizzaFlavor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOrderTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/btnSubmitOrder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgSecondPizzaFlavor"
                app:layout_constraintVertical_bias="1"
                tools:text="Order Total: $19.95" />

            <Button
                android:id="@+id/btnSubmitOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:enabled="@{viewModel.pizzaOrder != null}"
                android:text="@string/place_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgSecondPizzaFlavor"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>