<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <variable
            name="viewModel"
            type="com.mozio.omarkrostom.pizza_menu.viewModel.PizzaViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSuccess"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_success" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/order_placed_successfully"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivSuccess" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTextSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/orderSummary"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOrderSuccess" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@{viewModel.pizzaOrder.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTextSummary"
            app:layout_constraintVertical_bias="1"
            tools:text="Mozarrela And Pepporoni" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOrderName"
            app:layout_constraintVertical_bias="1"
            tools:text="Order Total: $19.95" />

        <Button
            android:id="@+id/btnMakeAnotherOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/make_another_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOrderSuccess"
            app:layout_constraintVertical_chainStyle="packed" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>